* configure.ac (HAVE_INOTIFY): Speed up configure-time test.
There's no need to test for any of three inotify functions,
since we use all three.  Check for just the first one.

--- a/configure.ac
+++ b/configure.ac
@@ -2187,15 +2187,14 @@ AC_SUBST(LIBGNUTLS_LIBS)
 AC_SUBST(LIBGNUTLS_CFLAGS)
 
 dnl inotify is only available on GNU/Linux.
-HAVE_INOTIFY=no
 if test "${with_inotify}" = "yes"; then
    AC_CHECK_HEADERS(sys/inotify.h)
    if test "$ac_cv_header_sys_inotify_h" = yes ; then
-     AC_CHECK_FUNCS(inotify_init1 inotify_add_watch inotify_rm_watch, HAVE_INOTIFY=yes)
+     AC_CHECK_FUNC(inotify_init1)
    fi
 fi
-if test "${HAVE_INOTIFY}" = "yes"; then
-   AC_DEFINE(HAVE_INOTIFY, [1], [Define to 1 to use inotify])
+if test "$ac_cv_func_inotify_init1" = yes; then
+  AC_DEFINE(HAVE_INOTIFY, 1, [Define to 1 to use inotify.])
 fi
 
 dnl Do not put whitespace before the #include statements below.
