--- a/doc/misc/makefile.w32-in
+++ b/doc/misc/makefile.w32-in
@@ -55,7 +55,8 @@ INFO_TARGETS = $(infodir)/ccmode$(INFO_EXT) \
 		$(infodir)/epa$(INFO_EXT) $(infodir)/mairix-el$(INFO_EXT) $(infodir)/sasl$(INFO_EXT) \
 		$(infodir)/auth$(INFO_EXT) $(infodir)/eieio$(INFO_EXT) $(infodir)/ede$(INFO_EXT) \
 		$(infodir)/semantic$(INFO_EXT) $(infodir)/edt$(INFO_EXT) $(infodir)/emacs-gnutls$(INFO_EXT) \
-		$(infodir)/srecode$(INFO_EXT) $(infodir)/bovine$(INFO_EXT)
+		$(infodir)/srecode$(INFO_EXT) $(infodir)/bovine$(INFO_EXT) \
+		$(infodir)/wisent$(INFO_EXT)
 DVI_TARGETS = calc.dvi cc-mode.dvi cl.dvi dbus.dvi dired-x.dvi \
 		ediff.dvi forms.dvi gnus.dvi message.dvi emacs-mime.dvi \
 		sieve.dvi pgg.dvi mh-e.dvi \
@@ -66,7 +67,8 @@ DVI_TARGETS = calc.dvi cc-mode.dvi cl.dvi dbus.dvi dired-x.dvi \
 		newsticker.dvi rcirc.dvi erc.dvi ert.dvi \
 		remember.dvi nxml-mode.dvi \
 		epa.dvi mairix-el.dvi sasl.dvi auth.dvi eieio.dvi ede.dvi \
-		semantic.dvi edt.dvi emacs-gnutls.dvi srecode.dvi bovine.dvi
+		semantic.dvi edt.dvi emacs-gnutls.dvi srecode.dvi bovine.dvi \
+		wisent.dvi
 INFOSOURCES = info.texi
 
 # The following rule does not work with all versions of `make'.
@@ -369,6 +371,10 @@ $(infodir)/bovine$(INFO_EXT): bovine.texi doclicense.texi
 bovine.dvi: bovine.texi doclicense.texi
 	$(ENVADD) $(TEXI2DVI) $(srcdir)/bovine.texi
 
+$(infodir)/wisent$(INFO_EXT): wisent.texi doclicense.texi
+	$(MAKEINFO) $(MAKEINFO_OPTS) $(INFO_OPTS) -o $@ wisent.texi
+wisent.dvi: wisent.texi doclicense.texi
+	$(ENVADD) $(TEXI2DVI) $(srcdir)/wisent.texi
 
 mostlyclean:
 	- $(DEL) *.log *.cp *.fn *.ky *.pg *.vr core *.tp *.core gnustmp.*
@@ -399,7 +405,7 @@ clean: mostlyclean
 		 $(infodir)/eieio* $(infodir)/ede* \
 		 $(infodir)/semantic* $(infodir)edt* \
 		 $(infodir)/emacs-gnutls* $(infodir)/srecode* \
-		 $(infodir)/bovine*
+		 $(infodir)/bovine* $(infodir)/wisent*
 
 distclean: clean
 	- $(DEL) makefile
